--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 	<body>
 		<h1>The Amazing Mouse Game!</h1>
 		<h2 id="status">Begin by moving your mouse over the "S".</h2>
+		<h3 id="countdownTimer">2 mins timer will countdown when starting the game</h3>
 		<div id="game">
 			<div id="start">S</div>
 			<div class="boundary" id="boundary1"></div>
