--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 		<title>Maze!</title>
 		<link href="game.css" type="text/css" rel="stylesheet" />
 		<script src="game.js" type="text/javascript"></script>
+		<script src="https://kit.fontawesome.com/26ba635ed3.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
@@ -11,6 +12,14 @@
 		<h2 id="status">Begin by moving your mouse over the "S".</h2>
 		<h3 id="countdownTimer">2 mins timer will countdown when starting the game</h3>
 		<div id="game">
+			<div class="iconsToCollect">
+				<i class="fa-sharp-duotone fa-solid fa-coins icon1"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon2"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon3"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon4"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon5"></i>
+			</div>
+			
 			<div id="start">S</div>
 			<div class="boundary" id="boundary1"></div>
 			<div class="boundary"></div>
