CSS <> grouping the coins into one class

--- a/game.html
+++ b/game.html
@@ -12,12 +12,12 @@
 		<h2 id="status">Begin by moving your mouse over the "S".</h2>
 		<h3 id="countdownTimer">2 mins timer will countdown when starting the game</h3>
 		<div id="game">
-			<div class="iconsToCollect">
-				<i class="fa-sharp-duotone fa-solid fa-coins icon1"></i>
-				<i class="fa-sharp-duotone fa-solid fa-coins icon2"></i>
-				<i class="fa-sharp-duotone fa-solid fa-coins icon3"></i>
-				<i class="fa-sharp-duotone fa-solid fa-coins icon4"></i>
-				<i class="fa-sharp-duotone fa-solid fa-coins icon5"></i>
+			<div id="coins">
+				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
+				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
 			</div>
 			
 			<div id="start">S</div>
