adding voice effect when collecting coins

--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
 		<h3 id="countdownTimer">2 mins timer will countdown when starting the game</h3>
 		<div id="game">
 			<div id="coins">
+				<audio id="audio" src="/maze game/maze-fcs/audio/coin-257878.mp3"></audio>
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
