adding voice effect when time is over

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 		<h3 id="countdownTimer">2 mins timer will countdown when starting the game</h3>
 		<div id="game">
 			<div id="coins">
-				<audio id="audio" src="/maze game/maze-fcs/audio/coin-257878.mp3"></audio>
+				<audio id="coinAudio" src="/maze game/maze-fcs/audio/coin-257878.mp3"></audio>
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
@@ -21,6 +21,7 @@
 				<i class="fa-sharp-duotone fa-solid fa-coins icon"></i>
 			</div>
 			
+			<audio id="gameOverAudio" src="/maze game/maze-fcs/audio/game-over-arcade-6435.mp3"></audio>
 			<div id="start">S</div>
 			<div class="boundary" id="boundary1"></div>
 			<div class="boundary"></div>
