--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
 			</div>
 			
 			<audio id="gameOverAudio" src="/maze game/maze-fcs/audio/game-over-arcade-6435.mp3"></audio>
+			<audio id="winnerAudio" src="/maze game/maze-fcs/audio/marimba-win-a-3-209674.mp3"></audio>
 			<div id="start">S</div>
 			<div class="boundary" id="boundary1"></div>
 			<div class="boundary"></div>
@@ -34,6 +35,11 @@
 			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
 		</p>
 		<div class="boundary example"></div>
+
+		<div>
+			<button id="resetGame">Reset Game</button>
+		</div>
+		
 		<p>
 			Good luck
 		</p>
